[project]
name = "comfyui-nsfw-guard"
version = "1.0.0"
description = "NSFW content detection node for ComfyUI - blocks inappropriate images automatically"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "vuhung3990", email = "vuhung3990@gmail.com"}
]
keywords = ["comfyui", "nsfw", "content-moderation", "safety", "yolo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/vuhung3990/comfyui-nsfw-guard"
Repository = "https://github.com/vuhung3990/comfyui-nsfw-guard"
Issues = "https://github.com/vuhung3990/comfyui-nsfw-guard/issues"

[tool.comfyui]
PublisherId = "vuhung3990"
DisplayName = "NSFW Guard"
Icon = ""
